mudei o exerc!cio 1

--- a/exercisios/ex001/index.html
+++ b/exercisios/ex001/index.html
@@ -11,6 +11,6 @@
     <p>Esse e meu primeiro documento Html!</p>
     <p>mano basicamente is</p>
     <hr>
-    <h2>sei lá</h2>
+    <h2>sei lá 2</h2>
 </body>
 </html>
