--- a/exercisios/ex022/fundo06.html
+++ b/exercisios/ex022/fundo06.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>background-size</title>
+    <title>fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+           background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+           background-size: cover;
+            /* shorthand - backgrond
+            color > image > position reapt > [size] > attachemnt */
+            /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat; 
-            background-size: cover ;
+            background-size: cover;
+            background-attachment: fixed;*/
         }
         main{
             background-color: aliceblue;
@@ -25,6 +30,8 @@
 <body>
     <main>
         <h1>teste imagen</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum dignissimos veniam omnis eaque inventore, rerum dolorum? Dicta mollitia eveniet tenetur facere est temporibus suscipit dolore. Quo porro nobis assumenda? Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nulla laborum quos est reprehenderit exercitationem, animi autem? Voluptate excepturi sit magni ut maxime. Amet pariatur dolore provident hic harum repudiandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti harum dignissimos veniam omnis eaque inventore, rerum dolorum? Dicta mollitia eveniet tenetur facere est temporibus suscipit dolore. Quo porro nobis assumenda? Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nulla laborum quos est reprehenderit exercitationem, animi autem? Voluptate excepturi sit magni ut maxime. Amet pariatur dolore provident hic harum repudiandae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus voluptatum tempore harum porro explicabo, voluptate ex? Sint enim porro quaerat, possimus odit soluta, consectetur, labore animi accusamus tenetur quibusdam? Sequi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur amet consectetur nostrum id placeat facilis praesentium fugit itaque veritatis cupiditate unde, a, illo aliquam quas expedita, adipisci eaque obcaecati autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quam? Nam obcaecati consectetur cupiditate, eveniet magni minus enim delectus dolore sint quos exercitationem? Ullam facere est eaque minus magni ducimus!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit atque eligendi quis, voluptatibus impedit nihil, neque ab modi natus eius quos magnam dolorem at ducimus ullam cum accusantium sint! Veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam excepturi officiis eveniet sequi tenetur perferendis, dolorem deserunt fuga facilis quam dolore itaque. Nihil vitae distinctio amet adipisci necessitatibus numquam illum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi optio labore consectetur aliquam eos doloribus, facilis consequuntur magni magnam repellendus doloremque nesciunt ullam dolores quo illo atque accusantium eligendi debitis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptas animi laboriosam, quo voluptates quas impedit placeat minima amet doloribus commodi eius sunt ducimus laborum debitis quisquam eos saepe! Eos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eveniet aperiam tempora a reiciendis quae officia laboriosam consequatur nobis, fugit consectetur doloribus eos deserunt quibusdam corporis. Quis nobis illum sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi maxime iste deserunt porro unde illo. Iure aperiam quia omnis excepturi beatae voluptate et quos? Corporis possimus eaque labore nobis voluptatum?</p>
     </main>
 </body
