--- a/exercisios/desafios/desafio12/index.html
+++ b/exercisios/desafios/desafio12/index.html
@@ -13,7 +13,7 @@
 
         </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -26,7 +26,7 @@
     </section>
 
    
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -40,7 +40,7 @@
 
    
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -64,7 +64,7 @@
 
    
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -78,7 +78,7 @@
 
    
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -100,7 +100,7 @@
         </p>
     </section>
     <footer>
-        <p>site criado por <a href="https://github.com/enzogiraldo" target="_blank">Enzo giraldo</a></p>
+        <p>Site criado por <a href="https://github.com/enzogiraldo" target="_blank">Enzo giraldo</a></p>
     </footer>
 </body>
 </html>
