--- a/exercisios/ex023/tabela001.html
+++ b/exercisios/ex023/tabela001.html
@@ -10,24 +10,26 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-        tr.linha {
-            background-color: blue;
         }
         td {
             border: 1px solid black;
             padding: 5px;
+            text-align: center;
+            vertical-align: top;
         }
-        td.unico{
-            background-color: darkgoldenrod;
+        .numero {
+            text-align: left;
+            vertical-align: bottom;
         }
+        
     </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
     <table>
-        <tr class="linha">
+        <tr>
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -35,7 +37,7 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td class="unico">C2</td>
+            <td>C2</td>
         </tr>
         <tr>
             <td>A3</td>
@@ -45,15 +47,9 @@
         <tr>
             <td>A4</td>
             <td>B4</td>
-            <td>C4</td>
+            <td class="numero">C4</td>
         </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
-        </tr>
+       
     </table>
 </body>
 </html>
