--- a/exercisios/ex023/tabela002.html
+++ b/exercisios/ex023/tabela002.html
@@ -13,8 +13,14 @@
             border-collapse: collapse;
         }
         thead, tfoot {
-            background-color: rgba(102, 102, 102, 0.808);
+            background-color: rgba(37, 37, 37, 0.808);
             color: white;
+        }
+        tbody > tr:nth-child(odd){
+            background-color: rgb(173, 173, 173);
+        }
+            tbody > tr:nth-child(even){
+            background-color: rgb(255, 255, 255);
         }
         td, th {
             border: 1px solid black;
@@ -26,16 +32,24 @@
         th#total {
             text-align: right;
         }
+        caption {
+            color: white;
+            background-color: rgb(143, 143, 143);
+            padding: 20px;
+            font-size: 1.4em;
+            border: 1px solid black;
+        }
        
     </style>
 </head>
 <body>
     <h1>tabelas grandes </h1>
     <table> 
+        <caption><strong>População nos estados brasileiros</strong></caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px;">População</th>
             </tr>
         </thead>
         <tbody> 
@@ -62,10 +76,11 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <th id="total"><strong> 111.539.199</strong></th>
             </tr>
         </tfoot>
+        
     </table>
 </body>
 </html>
