--- a/exercisios/ex023/tabela002.html
+++ b/exercisios/ex023/tabela002.html
@@ -11,9 +11,10 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         thead, tfoot {
-            background-color: rgba(37, 37, 37, 0.808);
+            background-color: rgb(58, 58, 58);
             color: white;
         }
         tbody > tr:nth-child(odd){
@@ -38,6 +39,11 @@
             padding: 20px;
             font-size: 1.4em;
             border: 1px solid black;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color:rgb(58, 58, 58) ;
         }
        
     </style>
@@ -82,5 +88,6 @@
         </tfoot>
         
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic beatae, blanditiis ex ab velit, fugiat nostrum soluta voluptas aliquam ullam ipsum quam laboriosam deserunt quas temporibus animi? Soluta, distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus illo? Nobis ipsa ullam facere sint iste, quod deserunt praesentium dolore doloremque minus! Nihil, iste dignissimos repellat ipsam beatae officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi earum, repellat inventore veritatis quasi, nesciunt id accusantium porro, quisquam doloribus. Accusamus impedit adipisci voluptas neque temporibus, sapiente explicabo reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, praesentium eveniet! Dolorem illo, culpa animi rem libero neque molestiae magnam. Voluptate aliquid nemo nobis qui neque? Eaque tenetur architecto dolores.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic beatae, blanditiis ex ab velit, fugiat nostrum soluta voluptas aliquam ullam ipsum quam laboriosam deserunt quas temporibus animi? Soluta, distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus illo? Nobis ipsa ullam facere sint iste, quod deserunt praesentium dolore doloremque minus! Nihil, iste dignissimos repellat ipsam beatae officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi earum, repellat inventore veritatis quasi, nesciunt id accusantium porro, quisquam doloribus. Accusamus impedit adipisci voluptas neque temporibus, sapiente explicabo reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, praesentium eveniet! Dolorem illo, culpa animi rem libero neque molestiae magnam. Voluptate aliquid nemo nobis qui neque? Eaque tenetur architecto dolores.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic beatae, blanditiis ex ab velit, fugiat nostrum soluta voluptas aliquam ullam ipsum quam laboriosam deserunt quas temporibus animi? Soluta, distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus illo? Nobis ipsa ullam facere sint iste, quod deserunt praesentium dolore doloremque minus! Nihil, iste dignissimos repellat ipsam beatae officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi earum, repellat inventore veritatis quasi, nesciunt id accusantium porro, quisquam doloribus. Accusamus impedit adipisci voluptas neque temporibus, sapiente explicabo reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, praesentium eveniet! Dolorem illo, culpa animi rem libero neque molestiae magnam. Voluptate aliquid nemo nobis qui neque? Eaque tenetur architecto dolores.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem hic beatae, blanditiis ex ab velit, fugiat nostrum soluta voluptas aliquam ullam ipsum quam laboriosam deserunt quas temporibus animi? Soluta, distinctio. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, accusamus illo? Nobis ipsa ullam facere sint iste, quod deserunt praesentium dolore doloremque minus! Nihil, iste dignissimos repellat ipsam beatae officia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi earum, repellat inventore veritatis quasi, nesciunt id accusantium porro, quisquam doloribus. Accusamus impedit adipisci voluptas neque temporibus, sapiente explicabo reprehenderit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, praesentium eveniet! Dolorem illo, culpa animi rem libero neque molestiae magnam. Voluptate aliquid nemo nobis qui neque? Eaque tenetur architecto dolores.</p>
 </body>
 </html>
