--- a/exercisios/ex004/index.html
+++ b/exercisios/ex004/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="Social-Media-Icons-Glossy-Social-HTML5.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>olha a favicoaqui em cima
+    <h1>olha a favicon aqui em cima
     </h1>
     <hr>
     <p>olha esse bagulho q eu fiz</p>
