começando tabela004.html

--- a/exercisios/desadio  1-cap21/tabela02.html
+++ b/exercisios/desadio  1-cap21/tabela02.html
@@ -10,8 +10,8 @@
         }
         td {
             border: 1px solid black;
-            padding: 13px;
-            width: 75px;
+            padding: 20px;
+            width: 55px;
             border-radius: 5px;
             text-align: center;
         }
@@ -29,6 +29,20 @@
             <td>e</td>
             <td>f</td>
         </tr>
+        <tr>
+            <td>g</td>
+            <td>h</td>
+            <td>i</td>
+        </tr>
+        <tr>
+            <td>j</td>
+            <td>k</td>
+            <td>l</td>
+        </tr>
+        <tr>
+            <td colspan="4">m</td>
+        </tr>
     </table>
+    <p><a href="tabela01.html">taberla 01</a></p>
 </body>
-</html>
+<
