--- a/exercisios/ex024/iframe001.html
+++ b/exercisios/ex024/iframe001.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>estudos de iframe</title>
+    <style>
+        iframe {
+            height: 500px;
+            width: 500px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
         
-        <iframe src="https://www.cursoemvideo.com/" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com/" frameborder="0"> <a href="https://www.cursoemvideo.com/">curso em video</a>
+        </iframe>
         para aprender a programar</p>
 
         <p style="padding: 30px;">talvez o site do <iframe src="https://enzogiraldo.github.io/projeto-cordel/" frameborder="0" height="400px"
-            width="400px"></iframe> também e muito legaç</p>
+            width="400px" scolling="no">
+        <a href="https://enzogiraldo.github.io/projeto-cordel/"></a>cordel moderno</iframe> também e muito legal</p>
 
 </body>
 </html>
