--- a/exercisios/ex024/iframe002.html
+++ b/exercisios/ex024/iframe002.html
@@ -8,7 +8,7 @@
 <body>
     <h1>teste com iframe</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, quis commodi? Fugiat quam ullam optio ut non dolorum atque, labore laudantium incidunt blanditiis dignissimos tempore obcaecati maiores illum delectus nulla. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum sapiente esse illum, id delectus voluptatum velit eum voluptas! Voluptatum animi eum quaerat libero suscipit harum. Suscipit totam aperiam est officiis?</p>
-    <iframe style="height: 500px; width: 531px;" src="pag001.html" frameborder="0"><a href="pag001.html">cordel moderno</a></iframe>
+    <iframe style="height: 500px; width: 531px;" src="paginas-extras/pag001.html" frameborder="0"><a href="pag001.html">cordel moderno</a> infelizmente seu navegador não é compativel</iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sint mollitia cupiditate laborum, veniam rem numquam. Dolorum suscipit adipisci impedit illum assumenda repellat nihil quisquam, eligendi nesciunt quis sit possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. A ratione omnis impedit deserunt ea incidunt alias porro ullam officiis commodi, quisquam molestiae quasi quibusdam! Odio quidem ut at quas fuga.</p>
 </body>
 </html>
