colocando conteudo dentro de um iframe

--- a/exercisios/ex024/iframe003.html
+++ b/exercisios/ex024/iframe003.html
@@ -34,7 +34,7 @@
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed fugit quibusdam, placeat error id eum obcaecati sit molestiae aut unde laudantium eius doloremque numquam voluptatem dolorum? Qui nemo molestias velit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis repellendus vero suscipit, distinctio dolore magnam earum veritatis illo, eum, minima quisquam ipsa. Magnam commodi quisquam et id consectetur sed asperiores?</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="0"><p>seu navegador não é compativel</p></iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>selecione uma das paginas acima</h1>" frameborder="0"><p>seu navegador não é compativel</p></iframe>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus exercitationem quidem molestiae ipsa minima eos, natus nisi sit pariatur atque doloribus quod error, hic, modi velit voluptates. Quaerat, impedit incidunt! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur fugiat, inventore reprehenderit, quas nostrum animi blanditiis voluptatem non vero asperiores dicta. Ducimus est saepe nulla voluptate laboriosam suscipit. Molestias, veritatis?</p>
 </body>
